# Lean-LangChain

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.json  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/lean-gateway/: pyproject.toml
apps/lean-gateway/lean_langchain_gateway/api/: app.py  capabilities.py  deps.py  fastapi_shim.py  path_safety.py  review_store.py  review_store_postgres.py  routes_batch.py  routes_environment.py  routes_health.py  routes_metrics.py  routes_reviews.py  routes_sessions.py  webhooks.py
apps/lean-gateway/lean_langchain_gateway/batch/: axiom_audit.py  build_runner.py  combine.py  fresh_checker.py  models.py
apps/lean-gateway/lean_langchain_gateway/environment/: fingerprint.py  models.py  snapshot_store.py
apps/lean-gateway/lean_langchain_gateway/server/: interactive_api.py  lsp_client.py  normalizers.py  runner.py  session_manager.py  worker_runner.py
apps/lean-gateway/obligation_runtime_lean_gateway/api/: app.py  capabilities.py  deps.py  errors.py  logging_config.py  review_store.py  review_store_postgres.py  routes_batch.py  routes_environment.py  routes_health.py  routes_metrics.py  routes_reviews.py  routes_sessions.py  webhooks.py
apps/lean-gateway/obligation_runtime_lean_gateway/batch/: axiom_audit.py  build_runner.py  combine.py  fresh_checker.py  models.py
apps/lean-gateway/obligation_runtime_lean_gateway/coordination/: __init__.py  queue.py
apps/lean-gateway/obligation_runtime_lean_gateway/environment/: fingerprint.py  overlay_fs.py  snapshot_store.py
apps/lean-gateway/obligation_runtime_lean_gateway/server/: interactive_api.py  leak_check.py  lsp_client.py  normalizers.py  runner.py  transport.py  worker_pool.py  worker_runner.py
apps/orchestrator/: pyproject.toml
apps/orchestrator/lean_langchain_orchestrator/: README.md  __init__.py  app.py  cli.py  http_server.py  mcp_server.py  mcp_server_main.py  orchestrator_capabilities.py
apps/orchestrator/lean_langchain_orchestrator/pilot/: sample_workflow.py
apps/orchestrator/lean_langchain_orchestrator/runtime/: checkpointer.py  graph.py  initial_state.py  routes.py  witness_builder.py
apps/orchestrator/lean_langchain_orchestrator/runtime/nodes/: handlers.py
apps/orchestrator/obligation_runtime_orchestrator/: README.md  __init__.py  app.py  cli.py  http_server.py  mcp_server.py  mcp_server_main.py  mcp_session_store.py  orchestrator_capabilities.py  producer.py
apps/orchestrator/obligation_runtime_orchestrator/pilot/: sample_workflow.py
apps/orchestrator/obligation_runtime_orchestrator/runtime/: graph.py  initial_state.py  routes.py  state.py  witness_builder.py
apps/orchestrator/obligation_runtime_orchestrator/runtime/nodes/: __init__.py  audit_trust.py  batch_verify.py  draft_candidate.py  finalize.py  handlers.py  init_environment.py  interactive_check.py  interrupt_for_approval.py  policy_review.py  repair_from_diagnostics.py  repair_from_goals.py  retrieve_context.py
apps/review-ui/: .env.example  README.md  next.config.ts  package.json
contracts/openapi/: lean-gateway.json
docs/: README.md  deployment.md  glossary.md  integrate.md  releasing.md  running.md  tests-and-ci.md  workflow.md
docs/adrs/: ADR-0001-lean-is-the-semantic-authority.md  ADR-0002-two-lane-execution.md  ADR-0003-obligation-environment-witness-policy.md  ADR-0004-direct-tools-first.md  ADR-0005-environment-snapshots-and-overlays.md  ADR-0006-interactive-transport-boundary.md
docs/architecture/: README.md  acceptance-lane.md  core-primitives.md  environment-model.md  gateway-api.md  interactive-lane.md  mcp-adapter.md  multi-agent-protocol.md  naming.md  plugin-contract.md  policy-model.md  review-surface.md  reviewer-gated-execution.md  runtime-graph.md  telemetry-and-evals.md  worker-isolation.md
docs/demos/: README.md  full-demo.md  main-demo.md
docs/hand-off/: 01_end_to_end_cursor_prompt_pack.md  02_phase_1_starter_pack.md  03_phase_2_starter_pack.md  04_phase_3_starter_pack.md  05_master_execution_index.md
docs/operations/: runtime-capabilities.md
docs/runbooks/: evaluation.md  observability.md  operator-playbook.md  pilot.md  worker-ops.md
examples/: README.md  __init__.py  anthropic_patch_producer.py  fixture_patch_producer.py  hello_sdk_gateway.py  minimal_sdk_gateway.py  openai_patch_producer.py  producer_interface.py  requirements.txt  run_demo_with_producer.py
examples/integrations/: README.md
infra/: README.md
infra/docker/: docker-compose.yml  gateway.Dockerfile  lean-worker-entrypoint.sh  lean-worker-lean4.Dockerfile  lean-worker-slim.Dockerfile  lean-worker.Dockerfile  review-ui.Dockerfile
infra/k8s/: lean-worker-deployment.yaml  orchestrator-deployment.yaml  review-ui-deployment.yaml
infra/scripts/: obr_firecracker_run_example.py
lean_langchain/: __init__.py
obligation_runtime/: __init__.py
scripts/: README.md  axiom_audit_lean.sh  bootstrap_fixture_repo.sh  export_gateway_openapi.py  export_json_schemas.py  run_axiom_audit_win.bat  run_benchmark.py
scripts/axiom_list_lean/: README.md  run_axiom_list.sh
scripts/demos/: run_core_demo.py  run_demo_scenario_1.py  run_demo_scenario_2.py  run_demo_scenario_3.py  run_demo_scenario_4.py  run_demo_scenario_5.py  run_full_demo.py  run_hero_demo.py
scripts/fixtures/: false_theorem_patch.lean  sorry_patch.lean  valid_proof_edit_patch.lean
scripts/setup/: install_lean4checker.py
tests/: README.md  __init__.py  conftest.py
tests/contract/: __init__.py  test_openapi_contract_paths.py  test_openapi_schema_snapshots.py  test_surface_parity.py
tests/integration/: api_stubs.py  conftest.py  test_acceptance_lane.py  test_checkpointer_postgres.py  test_cli_demo.py  test_dataset_promotion.py  test_full_demo.py  test_full_demo_script.py  test_gateway_api.py  test_goal_retrieval.py  test_graph_runtime.py  test_interactive_lane.py  test_interrupt_resume.py  test_langsmith_fixed_corpus.py  test_langsmith_hooks.py  test_mcp_adapter.py  test_mcp_server_stdio.py  test_mcp_session_affinity.py  (+13 more)
(+64 files in other folders)
