[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

# Root is a metapackage (no app code here). Explicit wheel layout so ``pip install -e ".[dev]"`` works.
[tool.hatch.build.targets.wheel]
packages = ["obligation_runtime"]

[project]
name = "obligation-runtime"
version = "0.1.0"
description = "Lean-LangChain: semantic control plane (Obligation Runtime) for high-stakes agent workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
keywords = ["lean", "langchain", "langgraph", "verification", "obligation", "formal"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
schemas = ["obligation-runtime-schemas"]
sdk = ["obligation-runtime-schemas", "obligation-runtime-sdk"]
tools = ["obligation-runtime-tools"]
gateway = ["obligation-runtime-lean-gateway"]
orchestrator = ["obligation-runtime-orchestrator"]
full = [
  "obligation-runtime-orchestrator",
  "obligation-runtime-tools",
  "obligation-runtime-lean-gateway",
  "obligation-runtime-evals",
  "obligation-runtime-telemetry",
]
# Local dev: pip install -e ".[dev]" so `python -m mypy` works inside .venv (see Makefile typecheck).
dev = ["mypy>=1.8", "ruff>=0.4", "black>=24"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# Path must be set before importing obligation_runtime_schemas when run without pip install -e
"scripts/export_json_schemas.py" = ["E402"]
# Inject test doubles before importing app; imports must run in this order
"tests/conftest.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true

# Gateway route modules use try/except fallback classes; allow redef.
[[tool.mypy.overrides]]
module = [
  "obligation_runtime_lean_gateway.api.app",
  "obligation_runtime_lean_gateway.api.routes_sessions",
  "obligation_runtime_lean_gateway.api.routes_reviews",
  "obligation_runtime_lean_gateway.api.routes_environment",
  "obligation_runtime_lean_gateway.api.routes_batch",
  "obligation_runtime_lean_gateway.api.routes_health",
  "obligation_runtime_lean_gateway.api.routes_metrics",
]
disable_error_code = ["no-redef"]
