[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "lean-langchain-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "lean-langchain-schemas",
  "pydantic>=2.8",
  "fastapi>=0.111",
  "httpx>=0.27",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3"]
metrics = ["prometheus_client>=0.19"]
redis = ["redis>=5.0"]
