[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "lean-langchain-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "lean-langchain-schemas",
  "lean-langchain-sdk",
  "lean-langchain-policy",
  "langgraph",
  "langchain",
  "pydantic>=2.8",
  "fastapi>=0.111",
]
